# MetaNN_Demo

./: CMakeLists.txt  README.md
MetaNN/data/: _.h  bias_vector.h  dynamic.h  scalable_tensor.h  tensor.h  trivial_tensor.h  zero_tensor.h
MetaNN/data/facilities/: allocators.h  category_tags.h  continuous_memory.h  device_tags.h  lower_access.h  shape.h  traits.h
MetaNN/evaluate/: eval_buffer.h  eval_dispatcher.h  eval_group.h  eval_handle.h  eval_item.h  eval_plan.h
MetaNN/facilities/: _.h  traits.h  type_id.h
MetaNN/facilities/cont_metafuns/: helpers.h  sequential.h
MetaNN/layers/principal/others/: value_source_layer.h
Tests/: CMakeLists.txt  data_gen.h
Tests/LayerTest/: main.cpp
Tests/LayerTest/composite/: _.h  test_bias_layer.cpp
Tests/LayerTest/principal/: _.h
Tests/LayerTest/recurrent/: _.h
Tests/OtherTests/: main.cpp
